yoshimi 1.5.9 M

2018-10-31 Will
* Fixed regression - disappearing waveform Mag Type.
* Removed Harmonic Shift Reset.
  It's function is performed by a right click on the
  Harmonic Shift up or down button.
* Implemented CLI voice unison controls.

2018-10-30 Will
* CMakeLists.txt improvement from Hermann.
* GUI waveform deactivation adjustments:
  harmonic randomness.
  waveshape.
  spectrum adjust.
  filter.
  modulation.
  adaptive harmonics.
  base type parameter.
  base modulation parameters.
* Further adjustments to GUI waveform deactivation.

2018-10-28 Will
* PadSynth GUI 'apply' button updates when exporting.
* Added 'wait' command to CLI scripts.
* Added read/write part kit item name to CLI.
* Properly resolved PadSynth segfault.
  Due to invalid error check!
* Minor adjustments to CLI PadSynth text.
* Added ID for context level for AddSynth Voice Modulator.

2018-10-27 Will
* BugFix: GUI segfault exporting padsyth samples.
  Only on kit items > 0 and fix is temporary hack :(

2018-10-26 Will
* Implemented CLI PadSynth Controls.

2018-10-25 Will
* Found missing PadSynth overtones option.
* Deactivate PadSynth overtones if set as harmonic.
* Small revision to PadSynth GUI.
* Deactivate SubSynth overtones if set as harmonic.

2018-10-24 Will
* Deactivate PadSynth amp group if Multiplier off.

2018-10-23 Will
* Started defining CLI PadSynth Controls.

2018-10-21 Will
* Implemented proper resonance limits.
* Corrected 2 AddSynth tooltips.

2018-10-20 Will
* Added Lorenzo's synth_prelude to examples.
* Possibly cured occasional GUI corruption.
* Completed CLI AddSynth base controls.

2018-10-19 Will
* Most #defines in globals.h changed to const.
* BugFix: CLI not reading resonance points.
* Completed initial trial of CLI resonance entry.

2018-10-18 Will
* Some cleanups to Resonance GUI.

2018-10-17 Will
* Deactivate resonance GUI if not enabled.
* All mutex code now commented out.
  Will eventually be removed if no problems.

2018-10-15 Will